2011-07-14  Mark Wielaard  <mark@klomp.org>

	* Makefile.am (CORBA_SHA256SUM): Updated for new icedtea hg server
	settings.
	(HOTSPOT_SHA256SUM): Likewise.
	(JAXP_SHA256SUM): Likewise.
	(JAXWS_SHA256SUM): Likewise.
	(JDK_SHA256SUM): Likewise.
	(LANGTOOLS_SHA256SUM): Likewise.
	(OPENJDK_SHA256SUM): Likewise.

2011-07-12  Andrew John Hughes  <ahughes@redhat.com>

	* NEWS: Add section for 3.0 beta 1.
	* configure.ac: Update version to
	3.0b1pre.

2011-07-08  Xerxes Rånby  <xerxes@zafena.se>

	JamVM: Is self-hosting.
	* patches/jamvm/remove-sun.misc.Perf-debug-code.patch: New patch.
	* Makefile.am:
	(ICEDTEA_PATCHES): Apply new patch when building JamVM.
	* HACKING: Updated.
	* NEWS: Updated.

2011-07-05  Andrew John Hughes  <ahughes@redhat.com>

	PR icedtea/751:
	(ICEDTEA_BOOT_PATCHES): Make application of
	javah.patch dependent on javah presenting
	with bug 40188.

2011-07-05  Andrew John Hughes  <ahughes@redhat.com>

	PR icedtea/751
	* Makefile.am:
	(ICEDTEA_BOOT_PATCHES): Include compile-for-7
	patch if javac supports diamond.  This makes
	the HotSpot build use source/target 7, allowing
	it to compile the JDK code it depends on.
	* javac.in: Add -XDignore.symbol.file=true
	when using javac to avoid numerous proprietary
	warnings.
	* patches/boot/compile-for-7.patch:
	Set SOURCE_LANGUAGE_VERSION/TARGET_CLASS_VERSION
	use 7 in HotSpot instead of 6.
	* patches/boot/hotspot-jdk-dependency.patch:
	Include the *nix-specific code in solaris/classes.

2011-06-29  Andrew John Hughes  <ahughes@redhat.com>

	* acinclude.m4:
	(IT_FIND_JAVA): Check that the binary is also
	a regular file as well as executable.
	(IT_FIND_JAVAH): Likewise.
	(IT_FIND_JAR): Likewise.
	(IT_FIND_RMIC): Likewise.
	(IT_FIND_NATIVE2ASCII): Likewise.

2011-06-28  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am,
	(HOTSPOT_CHANGESET): Update to bring in Linux 3 fix..
	(HOTSPOT_SHA256SUM): Likewise.

2011-06-27  Xerxes Rånby  <xerxes@zafena.se>

	JamVM